# cminor-mock

./: MANIFEST.in  README.md  adaptor.py  analyzers.py  decorators.py  generator.py  lcs.py  lemmatizers.py  math_functs.py  modify_text.py  pyproject.toml  requirements.txt  setup.py  solar.py  split_text.py  utils.py  word.py
edit_distance_modified/: edit_distance.py
files/model_files/: AoA_ratings_Kuperman_et_al_BRM.xlsx  Corpus_frequency_log.xlsx  aoa_dict.pkl  br2am_2021.04.25.xlsx  catile_example_texts.csv  cefr_word_model.h5  concreteness_dict.pkl  fry_sigh_words.txt  kde_model.pkl  lexile_20220410_2.h5  lexile_linear.pkl  lexile_linear_20240208.pkl  log_frequency_dict_w_pos.pkl  log_frequency_dict_wo_pos.pkl  mismatches.csv  model94_2.h5  mrc_database_cnc_img_nsyl_nphon.csv  normalizer.pkl  noun.csv  noun_pluralia_tantum.csv  outlier_detector_params.sav  outlier_ranges.pkl  transformer.sav
files/model_files/cefr/: cefr_w_pos.pkl  cefr_w_pos_mean_prim.pkl  cefr_w_pos_min_prim.pkl  cefr_w_pos_prim.pkl  cefr_w_pos_sup.pkl  cefr_wo_pos.pkl  cefr_wo_pos_mean_prim.pkl  cefr_wo_pos_min_prim.pkl  cefr_wo_pos_prim.pkl  cefr_wo_pos_sup.pkl  people_list.pkl  phrases_empty.pkl  sentence_level_model.keras  topic_words.pkl
files/model_files/lexile_20240208/: fingerprint.pb  keras_metadata.pb  saved_model.pb
files/vars/: density_sent_sim.pkl
spacy/: SolarSpacy.py  __init__.py
src/: __init__.py  generator.py  get_results.py
src/mock_cminor/: adaptor.py  analyzers.py  dictionary.py  generator.py  get_results.py  utils.py
test/: test_cefr.py
(+20 files in other folders)
